crates/stylex-transform/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/snapshots/transform__evaluation__stylex_evaluation__import_evaluation__evaluation_of_imported_values_works_based_on_configuration__theme_name_hashing_based_on_filename_alone_works__imported_vars_with_stylex_suffix_used_as_renamed_style_keys_dynamically.snap
---
source: crates/stylex-transform/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/theme_name_hashing_based_on_filename_alone_works.rs
expression: transformation
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import "otherFile.stylex";
import stylex from 'stylex';
import { theme as MyTheme } from 'otherFile.stylex';
_inject2({
    ltr: ".__hashed_var__1kf7ake{--__hashed_var__11epo5g:var(--x---__hashed_var__11epo5g)}",
    priority: 1
});
_inject2({
    ltr: '@property --x---__hashed_var__11epo5g { syntax: "*"; inherits: false;}',
    priority: 0
});
export const styles = {
    color: (color)=>[
            {
                "--__hashed_var__11epo5g": color != null ? "__hashed_var__1kf7ake" : color,
                $$css: true
            },
            {
                "--x---__hashed_var__11epo5g": color != null ? color : undefined
            }
        ]
};
stylex.props(styles.color('red'));
