crates/stylex-transform/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/snapshots/transform__evaluation__stylex_evaluation__import_evaluation__evaluation_of_imported_values_works_based_on_configuration__theme_name_hashing_based_on_filename_alone_works__importing_file_with_stylex_suffix_works.snap
---
source: crates/stylex-transform/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/theme_name_hashing_based_on_filename_alone_works.rs
expression: transformation
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import "otherFile.stylex";
import stylex from 'stylex';
import { MyTheme } from 'otherFile.stylex';
_inject2({
    ltr: ".__hashed_var__1r7rkhg{color:var(--__hashed_var__1jqb1tb)}",
    priority: 3000
});
"__hashed_var__1r7rkhg";
